스프링부트 시큐리티에서 헤더 수동 적용한 것 때문에 cors 적용 문제 에러 수정 및 저번에 API 변경에 따라서 js도 수정